CSS: fix #editmessage to avoid displaying a horizontal scrollbar.

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -552,3 +552,7 @@ input#searchbox:focus {
 .feedlink {
 	margin-top: 1.585em;
 }
+
+#editmessage {
+	width: 98%;
+}
